# datatable

./: CMakeLists.txt  CMakeLists.txt.user.7c0c483  builders.h  column.cpp  column.h  main.cpp  reader.h  schema.h  table.h  types.h  viewer_bytebuffer.cpp  viewer_bytebuffer.h  viewer_value.cpp  viewer_value.h  writer.h
comparators/: comparator.h
iterators/: iterator.h
tests/: columntest.h  comparatortest.h  viewertest.h
values/: bytebuffer.cpp  bytebuffer.h  value.cpp  value.h
viewers/: bytebuffer.cpp  bytebuffer.h  value.cpp  value.h
